Criei a função Insert

--- a/praticando CRUD com MVC/praticando CRUD com MVC.csproj
+++ b/praticando CRUD com MVC/praticando CRUD com MVC.csproj
@@ -98,7 +98,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controller\Contato.cs" />
+    <Compile Include="Controller\ContatoController.cs" />
     <Compile Include="View\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -107,7 +107,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Model\Contato.cs" />
+    <Compile Include="Model\ContatoView.cs" />
     <EmbeddedResource Include="View\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
