Refatorei os métodos: Create, Read, Delete e Mostrar itens selecionados.
Faltou as validações!

--- a/praticando CRUD com MVC/praticando CRUD com MVC.csproj
+++ b/praticando CRUD com MVC/praticando CRUD com MVC.csproj
@@ -107,7 +107,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Model\ContatoView.cs" />
+    <Compile Include="Model\ContatoModel.cs" />
     <EmbeddedResource Include="View\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
